RMagick 1.8.0
    o Added Image#shadow (ImageMagick 6.1.7)
    o Added Image::Info#undefine, #[], #[]=
    o Incorporated RVG classes
    o Added RVG documentation, examples, updated installer

RMagick 1.7.4
    o Fix bug #1727
    o Fix affine_transform.rb
    o Tested with ImageMagick 6.2.1

RMagick 1.7.3
    o Fix bug #1553, a build issue with ImageMagick 6.0.x

RMagick 1.7.2
    o Fix bugs #1308, #1310, #1314, #1533

RMagick 1.7.1
    o Fix bugs #1250, #1253
    o Tested with ImageMagick 6.1.7, Ruby 1.8.2

RMagick 1.7.0
    o Added splice, set_channel_depth to Image class (ImageMagick 6.0.0)
    o Added sharpen_channel, blur_channel to Image class (ImageMagick 6.0.1)
    o Added get_multiline_type_metrics to Draw class (ImageMagick 6.1.5),
      added new example scripts and images
    o Added normalize_channel, unsharp_mask_channel to Image class
      (ImageMagick 6.1.0)
    o Added read_inline to Image class
    o Renamed channel_compare to compare_channel, retained old name as an alias
      for backward compatibility.
    o Added default values for unsharp_mask arguments
    o Fixed bug #1193
    o Fixed segfault in destroy_Draw when Ruby gc'd the temp file name
      array before calling destroy_Draw
    o Tested with ImageMagick 6.1.6, GraphicsMagick 1.1.4, Ruby 1.8.2preview3.

RMagick 1.6.2
    o Fixed ImageList#deconstruct to return an imagelist
    o Fixed installation procedure to propagate user's CFLAGS, CPPFLAGS,
      and LDFLAGS through to the low-level Makefile
    o Fixed bugs #1048, #1127

RMagick 1.6.1
    o Changed to match changes in ImageMagick 6.1.4 API
    o Fixed bug #950

RMagick 1.6.0
    o Added posterize, gaussian_blur_channel, convolve_channel methods to Image class
      (ImageMagick 6.0.0)
    o Added new CompositeOperator constants (ImageMagick 6.0.0)
    o Added trim and trim! methods to Image class
    o Added each method to Enum subclasses
    o Added stroke_width= attribute to the Draw class