@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta name="generator" content=
-  "HTML Tidy for Linux/x86 (vers 1st July 2003), see www.w3.org" />
+  "HTML Tidy for Linux/x86 (vers 1st March 2005), see www.w3.org" />
 
   <title>RMagick: Constants</title>
   <meta http-equiv="Content-Type" content=
@@ -13,9 +13,9 @@
   <meta name="Copyright" content=
   "Copyright (C) 2005 by Timothy P. Hunter" />
   <link rel="stylesheet" type="text/css" href="css/doc.css" />
-  <script type="text/javascript" src="scripts/doc.js">
-  </script>
-  <style type="text/css">
+<script type="text/javascript" src="scripts/doc.js">
+</script>
+<style type="text/css">
   /*<![CDATA[*/
 
   /* Styles local to this page. */
@@ -57,7 +57,7 @@
   }
 
   /*]]>*/
-  </style>
+</style>
 </head>
 
 <body>
@@ -65,8 +65,8 @@
 
   <div class="nav">
     &laquo;&nbsp;<a href="info.html">Prev</a> | <a href=
-    "index.html">Contents</a> |
-    <a href="rvgtut.html">Next</a>&nbsp;&raquo;
+    "index.html">Contents</a> | <a href=
+    "rvgtut.html">Next</a>&nbsp;&raquo;
   </div>
 
   <h1>Constants</h1>
@@ -148,7 +148,7 @@
 
     <dd>An extended form of the <code>Version</code> constant with
     the format shown here:<br />
-    <code>This is RMagick 1.4.0 ($Date: 2005/03/12 17:02:42 $)
+    <code>This is RMagick 1.4.0 ($Date: 2005/04/30 14:29:49 $)
     Copyright (C) 2005 by Timothy P. Hunter<br />
     Built with ImageMagick 6.0.0 02/25/04 Q8
     http://www.imagemagick.org<br />
@@ -708,6 +708,11 @@
     "http://www.faqs.org/faqs/jpeg-faq/part1/">The JPEG image
     compression FAQ</a>.</dd>
 
+    <dt>JPEG2000Compression</dt>
+
+    <dd>JPEG2000 compression for compressed PDF images. (Introduced
+    in ImageMagick 6.2.2.)</dd>
+
     <dt>LosslessJPEGCompression</dt>
 
     <dd>This compression format is almost never used.</dd>
@@ -1187,9 +1192,9 @@
   <p class="spacer">&nbsp;</p>
 
   <div class="nav">
-  &laquo;&nbsp;<a href="info.html">Prev</a> | <a href=
-    "index.html">Contents</a> |
-    <a href="rvgtut.html">Next</a>&nbsp;&raquo;
-    </div>
+    &laquo;&nbsp;<a href="info.html">Prev</a> | <a href=
+    "index.html">Contents</a> | <a href=
+    "rvgtut.html">Next</a>&nbsp;&raquo;
+  </div>
 </body>
 </html>
