@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta name="generator" content=
-  "HTML Tidy for Linux/x86 (vers 1st December 2004), see www.w3.org" />
+  "HTML Tidy for Linux/x86 (vers 1st March 2005), see www.w3.org" />
 
   <title>RMagick: class Image (class and instance methods, part
   1)</title>
@@ -437,7 +437,9 @@ img = Magick::Image.new(256, 64) {
   }
 </pre>
 
-    <h4>See also</h4><p><a href=
+    <h4>See also</h4>
+
+    <p><a href=
     "ilist.html#new_image"><code>ImageList.new_image</code></a></p>
 
     <h4>Magick API</h4>
@@ -609,8 +611,10 @@ img = Magick::Image.read_inline(content)
   mom['Label'] = 'My Mother'
 </pre>
 
-    <h4>See also</h4><p><a href="#aset"><code>[ ]=</code></a>,
-    <a href="image2.html#properties"><code>properties</code></a></p>
+    <h4>See also</h4>
+
+    <p><a href="#aset"><code>[ ]=</code></a>, <a href=
+    "image2.html#properties"><code>properties</code></a></p>
 
     <h4>Magick API</h4>
 
@@ -862,8 +866,10 @@ img = Magick::Image.read_inline(content)
     "ex/images/spin.gif" alt="" class="spin" style="left:237px;"
     title="Mouse over the example to see the original image" /></p>
 
-    <h4>See also</h4><p><a href="image3.html#rotate">rotate</a>,
-    <a href="#shear">shear</a></p>
+    <h4>See also</h4>
+
+    <p><a href="image3.html#rotate">rotate</a>, <a href=
+    "#shear">shear</a></p>
 
     <h4>Magick API</h4>
 
@@ -1080,9 +1086,10 @@ img = Magick::Image.read_inline(content)
 
     <p>A new image</p>
 
-    <h4>See also</h4><p><a href=
-    "image3.html#white_threshold">white_threshold</a>, <a href=
-    "#channel_threshold">channel_threshold</a></p>
+    <h4>See also</h4>
+
+    <p><a href="image3.html#white_threshold">white_threshold</a>,
+    <a href="#channel_threshold">channel_threshold</a></p>
 
     <h4>Magick API</h4>
 
@@ -1140,7 +1147,9 @@ img = Magick::Image.read_inline(content)
     "left: 224px;" title=
     "Mouse over the example to see the original image" /></p>
 
-    <h4>See also</h4><p><a href="#border_bang">border!</a>, <a href=
+    <h4>See also</h4>
+
+    <p><a href="#border_bang">border!</a>, <a href=
     "image2.html#frame">frame</a></p>
 
     <h4>Magick API</h4>
@@ -1305,7 +1314,9 @@ mona.change_geometry!('320x240') { |cols, rows, img|
 
     <p>The maximum depth</p>
 
-    <h4>See also</h4><p><a href=
+    <h4>See also</h4>
+
+    <p><a href=
     "image3.html#set_channel_depth">set_channel_depth</a></p>
 
     <h4>Magick API</h4>
@@ -1439,9 +1450,10 @@ mona.change_geometry!('320x240') { |cols, rows, img|
     "ex/images/spin.gif" alt="" class="spin" style="left: 446px"
     title="Mouse over the example to see the original image" /></p>
 
-    <h4>See also</h4><p><a href=
-    "#adaptive_threshold">adaptive_threshold</a>, <a href=
-    "#black_threshold">black_threshold</a>, <a href=
+    <h4>See also</h4>
+
+    <p><a href="#adaptive_threshold">adaptive_threshold</a>,
+    <a href="#black_threshold">black_threshold</a>, <a href=
     "image3.html#random_channel_threshold">random_channel_threshold</a>,
     <a href="image3.html#threshold">threshold</a>, <a href=
     "image3.html#white_threshold">white_threshold</a></p>
@@ -1637,7 +1649,9 @@ mona.change_geometry!('320x240') { |cols, rows, img|
     "margin-bottom: 182px; margin-left: 4px;" title=
     "Mouse over the example to see the original image" /></p>
 
-    <h4>See also</h4><p><a href="#color_floodfill">color_floodfill</a></p>
+    <h4>See also</h4>
+
+    <p><a href="#color_floodfill">color_floodfill</a></p>
 
     <h4>Magick API</h4>
 
@@ -1692,9 +1706,10 @@ mona.change_geometry!('320x240') { |cols, rows, img|
     "margin-bottom: 182px;" title=
     "Mouse over the example to see the original image" /></p>
 
-    <h4>See also</h4><p><a href=
-    "#color_fill_to_border">color_fill_to_border</a>, <a href=
-    "image2.html#opaque">opaque</a></p>
+    <h4>See also</h4>
+
+    <p><a href="#color_fill_to_border">color_fill_to_border</a>,
+    <a href="image2.html#opaque">opaque</a></p>
 
     <h4>Magick API</h4>
 
@@ -1792,6 +1807,10 @@ mona.change_geometry!('320x240') { |cols, rows, img|
     "ex/images/spin.gif" alt="" class="spin" title=
     "Mouse over the example to see the original image" /></p>
 
+    <h4>See also</h4>
+
+    <p><a href="image3.html#sepiatone">sepiatone</a></p>
+
     <h4>Magick API</h4>
 
     <p>ColorizeImage</p>
@@ -1879,8 +1898,9 @@ mona.change_geometry!('320x240') { |cols, rows, img|
 f.color_point(50,50, 'red')
 </pre>
 
-    <h4>See also</h4><p><a href=
-    "image3.html#pixel_color">pixel_color</a>, <a href=
+    <h4>See also</h4>
+
+    <p><a href="image3.html#pixel_color">pixel_color</a>, <a href=
     "draw.html#point">Draw#point</a></p>
 
     <h4>Magick API</h4>
@@ -1911,7 +1931,9 @@ f.color_point(50,50, 'red')
 f.color_reset!(red)
 </pre>
 
-    <h4>See also</h4><p><a href="image2.html#erase_bang">erase!</a></p>
+    <h4>See also</h4>
+
+    <p><a href="image2.html#erase_bang">erase!</a></p>
 
     <h4>Magick API</h4>SetImage
   </div>
@@ -1972,7 +1994,9 @@ f.color_reset!(red)
     second is a the value of the computed distortion represented as
     a <code>Float</code>.</p>
 
-    <h4>See also</h4><p><a href="#difference">difference</a>, <a href=
+    <h4>See also</h4>
+
+    <p><a href="#difference">difference</a>, <a href=
     "#spaceship">&lt;=&gt;</a></p>
 
     <h4>Magick API</h4>
@@ -2224,7 +2248,9 @@ f.color_reset!(red)
 
     <p>A new image</p>
 
-    <h4>See also</h4><p><a href="#composite">composite</a>, <a href=
+    <h4>See also</h4>
+
+    <p><a href="#composite">composite</a>, <a href=
     "#affine_transform">affine_transform</a></p>
 
     <h4>Magick API</h4>
@@ -2293,6 +2319,11 @@ f.colors &raquo; 108
     "javascript:popup('contrast.rb.html')"><img src=
     "ex/contrast.jpg" alt="contrast example" title=
     "Click the image to see the example script" /></a>
+
+    <h4>See also</h4>
+
+    <p><a href=
+    "image3.html#sigmoidal_contrast_channel">sigmoidal_contrast_channel</a></p>
 
     <h4>Magick API</h4>
 
@@ -2588,8 +2619,9 @@ f2 = f.copy
     <p><a href=
     "javascript:popup('crop_with_gravity.rb.html')">crop_with_gravity.rb</a></p>
 
-    <h4>See also</h4><p><a href="#crop_bang">crop!</a>, <a href=
-    "#chop">chop</a></p>
+    <h4>See also</h4>
+
+    <p><a href="#crop_bang">crop!</a>, <a href="#chop">chop</a></p>
 
     <h4>Notes</h4>
 
@@ -2752,7 +2784,9 @@ f2 = f.copy
     "imageattrs.html#normalized_maximum_error">normalized_maximum_error</a>
     attributes.</p>
 
-    <h4>See also</h4><p><a href="#spaceship">&lt;=&gt;</a></p>
+    <h4>See also</h4>
+
+    <p><a href="#spaceship">&lt;=&gt;</a></p>
 
     <h4>Magick API</h4>IsImagesEqual
   </div>
@@ -2875,7 +2909,9 @@ exit
     <p>self</p>
 
     <h4>Note</h4>
-    <p>The display method is not supported on native MS Windows.</p>
+
+    <p>The display method is not supported on native MS
+    Windows.</p>
 
     <h4>Magick API</h4>
 
