@@ -331,8 +331,7 @@ self.define("tiff", "bits-per-sample", 2)
     or <a href="#define">define</a>. This is not the same as
     setting the option to a null value. The <code>undefine</code>
     method removes the option name from the list of options for the
-    specified format. Raises <code>ArgumentError</code> if the
-    option does not exist.</p>
+    specified format.</p>
 
     <h4>Arguments</h4>
 
