@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta name="generator" content=
-  "HTML Tidy for Linux/x86 (vers 1st December 2004), see www.w3.org" />
+  "HTML Tidy for Linux/x86 (vers 1st March 2005), see www.w3.org" />
 
   <title>RMagick: How to use RMagick</title>
   <meta http-equiv="Content-Type" content=
@@ -861,6 +861,12 @@ exit
       "image3.html#unsharp_mask_channel">unsharp_mask_channel</a></dt>
 
       <dd>Sharpen the image</dd>
+
+      <dt><a href=
+      "image3.html#sigmoidal_contrast_channel">sigmoidal_contrast_channel</a></dt>
+
+      <dd>Adjusts the contrast of an image channel with a
+      non-linear sigmoidal contrast algorithm</dd>
     </dl>
 
     <h4>Add effects</h4>
@@ -955,6 +961,11 @@ exit
       <dt><a href="image2.html#oil_paint">oil_paint</a></dt>
 
       <dd>Add an oil paint effect</dd>
+
+      <dt><a href="image3.html#sepiatone">sepiatone</a></dt>
+
+      <dd>Applies an effect similar to the effect achieved in a
+      photo darkroom by sepia toning.</dd>
 
       <dt><a href="image3.html#shade">shade</a></dt>
 
@@ -1311,7 +1322,7 @@ exit
     use radians instead of degrees.</p>
   </div>
 
-  <p class="spacer"> </p>
+  <p class="spacer">&nbsp;</p>
 
   <div class="nav">
     &laquo; <a href="index.html">Prev</a> | <a href=
